--- a/contrib/extensions/i18n/pom.xml
+++ b/contrib/extensions/i18n/pom.xml
@@ -70,6 +70,9 @@
                             SLING-INF/nodetypes/jcrlanguage.cnd,
                             SLING-INF/nodetypes/message.cnd
                         </Sling-Nodetypes>
+                        <Embed-Dependency>
+                            org.apache.sling.commons.osgi;inline="org/apache/sling/commons/osgi/ServiceUtil.*"
+                        </Embed-Dependency>
 
                     </instructions>
                 </configuration>
@@ -80,6 +83,12 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
+            <version>2.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.osgi</artifactId>
             <version>2.1.0</version>
             <scope>provided</scope>
         </dependency>
