SLING-2576 : I18n: Allow multiple ResourceBundleProviders, use the first one responding for a given locale
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1378151 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/i18n/pom.xml
+++ b/contrib/extensions/i18n/pom.xml
@@ -71,7 +71,7 @@
                             SLING-INF/nodetypes/message.cnd
                         </Sling-Nodetypes>
                         <Embed-Dependency>
-                            org.apache.sling.commons.osgi;inline="org/apache/sling/commons/osgi/ServiceUtil*"
+                            org.apache.sling.commons.osgi;inline="org/apache/sling/commons/osgi/ServiceUtil*|org/apache/sling/commons/osgi/PropertiesUtil*"
                         </Embed-Dependency>
 
                     </instructions>
