SLING-3954 : i18n filter still not called for error scripts
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1650479 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/i18n/pom.xml
+++ b/contrib/extensions/i18n/pom.xml
@@ -184,9 +184,12 @@
             <artifactId>servlet-api</artifactId>
         </dependency>
         
+        <!-- Version needs to be overwritten for SLING-3954 
+             Can be removed once we update to a new parent pom (>22) -->
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
+            <version>1.9.10</version>
         </dependency>
 
         <!-- Testing -->
