--- a/contrib/extensions/i18n/pom.xml
+++ b/contrib/extensions/i18n/pom.xml
@@ -42,7 +42,7 @@
         <org.ops4j.pax.logging.DefaultServiceLog.level>INFO</org.ops4j.pax.logging.DefaultServiceLog.level>
         <bundle.file.name>${basedir}/target/${project.build.finalName}.jar</bundle.file.name>
         <sling.java.version>6</sling.java.version>
-        <sling.launchpad.version>6</sling.launchpad.version>
+        <sling.launchpad.version>7</sling.launchpad.version>
     </properties>
 
     <scm>
@@ -63,23 +63,12 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <!-- As we're using JCR 2.0 for testing we explicitly have to
-                             import version 1.0 here  -->
-                        <Import-Package>
-                            javax.jcr.*;version=1.0,*
-                        </Import-Package>
-                        <Export-Package>
-                            org.apache.sling.i18n;version=2.2.0
-                        </Export-Package>
-                        <Private-Package>
-                            org.apache.sling.i18n.impl.*
-                        </Private-Package>
-
                         <Sling-Nodetypes>
                             SLING-INF/nodetypes/jcrlanguage.cnd,
                             SLING-INF/nodetypes/message.cnd
                         </Sling-Nodetypes>
                         <Embed-Dependency>
+                            jackrabbit-jcr-commons;inline="org/apache/jackrabbit/util/ISO9075.*|org/apache/jackrabbit/util/XMLChar.*||org/apache/jackrabbit/util/Text.*",
                             org.apache.sling.commons.osgi;inline="org/apache/sling/commons/osgi/ServiceUtil*|org/apache/sling/commons/osgi/PropertiesUtil*"
                         </Embed-Dependency>
 
@@ -131,15 +120,21 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-jcr-commons</artifactId>
+            <version>2.2.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <version>2.1.0</version>
+            <version>2.4.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.osgi</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -149,18 +144,6 @@
             <type>xml</type>
             <classifier>bundlelist</classifier>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.jcr.api</artifactId>
-            <version>2.0.6</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.jcr.resource</artifactId>
-            <version>2.0.6</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.jcr</groupId>
