--- a/contrib/explorers/resourceeditor/README
+++ b/contrib/explorers/resourceeditor/README
@@ -10,7 +10,7 @@ o Add the OSGi repository URL (http://www.jcrbrowser.org/sling/obr/repository.xm
 o Search for the "Apache Sling Resource Editor" resource and navigate to the latest version.
 o Click "Deploy and Start".
 o At /system/console/bundles you will see that the Resource Editor bundle is active.
-o Open "/.reseditor.html" at your server to see the web application.
+o Open "/reseditor/.html" at your server to see the web application.
 
 ++ Build the Sling Resource Editor ++
 o Deploy the binaries as described above. 
