--- a/contrib/explorers/resourceeditor/README
+++ b/contrib/explorers/resourceeditor/README
@@ -10,8 +10,9 @@ o After that you find the web application at "/reseditor/.html" on your server.
 ++ Development with the Sling Resource Editor ++
 o Use `mvn install sling:install` to deploy changes of Java classes
 o To have frontend changes automatically deployed call `mvn install -P autoInstallBundle -Dsling.mountByFS=true`
-o To have the less sources automatically compiled on change call `./grunt watch:less` in the frontend directory. Press Ctrl-Z to stop watching.
 o To run the build on your local machine call './grunt desktop_build' within the frontend directory. It includes end to end tests with firefox and chrome.
+o To have the less sources automatically compiled on change call `./grunt watch:less` in the frontend directory. Press Ctrl-Z to stop watching.
+o To have the 'desktop_build' target triggered on changes in the frontend tests, less sources, JavaScript files and JSP sources use call `./grunt watch:all` in the frontend directory and also press Ctrl-Z to stop watching. 
 
 
 
